--- a/_config.yml
+++ b/_config.yml
@@ -10,23 +10,23 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-# theme                    : "minimal-mistakes-jekyll"
+# theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes@master"
 minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "DCRM (RDA Edition)"
+title                    : "Development for DCRMR"
 title_separator          : "-"
-subtitle                 : "DCRMR: Descriptive Cataloging of Rare Materials (RDA Edition)"
+subtitle                 : "See bsc.rbms.info for the production environment."
 name                     : "Rare Books and Manuscripts Section Bibliographic Standards Committee"
-description              : "This website contains the official DCRMR standard for cataloging rare materials in RDA"
-url                      : "http://bsc.rbms.info/"
+description              : "This website contains the development-version of the DCRMR standard for cataloging rare materials in RDA"
+url                      : "https://dcrmr.github.io/"
 baseurl                  : #"/DCRMR"
-repository               : "rbms-bsc/DCRMR"
+repository               : "dcrmr/dcrmr.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "DCRM (RDA Edition)"
+masthead_title           : "Development for DCRMR"
 breadcrumbs              : false #, false (default)
 words_per_minute         : 200
 comments:
