Appendix-k to Appendix-k-books
Renamed page; updated associated links & files per Checklist; content revision still in progress

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -340,8 +340,8 @@ docs:
         url: /DCRMR/appendices/Appendix-h/
       - title: "J — Abbreviations for creators, publishers, printers, etc."
         url: /DCRMR/appendices/Appendix-j/
-      - title: "K — Mapping from DCRM to DCRMR"
-        url: /DCRMR/appendices/Appendix-k/
+      - title: "K — Mapping from DCRM(B) to DCRMR"
+        url: /DCRMR/appendices/Appendix-k-books/
         
   - title: "Glossary"
     url: /DCRMR/glossary/
